--- a/styles.css
+++ b/styles.css
@@ -378,12 +378,18 @@ input[type=text], select, textarea {
     }
   
   @media screen and (max-width: 400px){
+
+    .content{
+        margin-left: 5px;
+        margin-right: 5px;
+    }
+
     .content h1{
         font-size: 30px;
     }
 
     .content p{
-        width: 100vw;
+        width: 100%;
 
     }
     .images img{
