--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ html,body
     height: 100%;
     margin: 0px;
     padding: 0px;
-    overflow-x: hidden;
+    /*overflow-x: hidden; */
 }
 
 #nav{
@@ -62,7 +62,7 @@ html,body
 }
 
 .vessel{
-    margin-top: 10rem;
+    margin-top: 1rem;
     margin-bottom: 10rem;
     margin-right: 5vw;
     margin-left: 5vw;
@@ -95,7 +95,7 @@ html,body
 }
 
 .wrapper{
-    margin-top: 6rem;
+    margin-top: 1rem;
 }
 
 .images{
@@ -131,7 +131,7 @@ html,body
 }
 
 a.ex1:hover, a.ex1:active {
-  color: red;
+  color:#ae9142;
 }
 
 .fa 
@@ -238,7 +238,7 @@ input[type=text], select, textarea {
   }
 
   #form{
-      margin-top: 10rem;
+      margin-top: 4rem;
       margin-bottom: 5rem;
   }
 
@@ -378,18 +378,12 @@ input[type=text], select, textarea {
     }
   
   @media screen and (max-width: 400px){
-
-    .content{
-        margin-left: 5px;
-        margin-right: 5px;
-    }
-
     .content h1{
         font-size: 30px;
     }
 
     .content p{
-        width: 100%;
+        width: 100vw;
 
     }
     .images img{
@@ -400,4 +394,119 @@ input[type=text], select, textarea {
 
 
 
-
+/* sun dad che pachi call karu
+ok
+i love you boo booo
+i love you too jaan
+hu aa kru chu hoo ne complete tu joo
+ha sweetie 
+avu ho ne shivu susu kari ne
+haa cuttuu
+muahhhhh jaa
+hehee tataa
+byeee
+avi gaiiiii
+haa boo booo
+fw bhi kari lidhu
+oye hoyeee
+joo site
+hmmm
+hehee... i lovveeee yooouuuuu hubby
+cuttuu i love you too wifeyyyyy
+sorry
+hve kidhu ne toh bov maris
+lips?
+hehee
+rukk footer banavi lav hoo ne jaan 
+call kr ne thai emm hoi toh
+haan sweetie karu ek min
+haan
+bag ma badhu muki dav pachi karu
+ok
+bov utavad huhh
+i love you bhi na keva de
+awww sorry jaan
+blehh
+tu usualy vai jai etle mne emm jati rai hais 
+i loveee you wifeeyyyyyyy
+bleh bleh bleehhh
+annnnnn
+huhh
+plishhhh
+hmmm... i love you too
+cuttuuuu
+badha programmer loko apdne gaado apse
+LOL comments mate ?
+hknn... comment no galat istamal kariye chie to
+chalee apne su bhle ape
+blehhh kri deje tu
+hknn... avu ho ne jaan
+haan wifey
+hmmm
+i wuvvvvvvvvvvvvvvv youuuuuuuuuu
+I LOVE YOU TOOO HUBBY
+hehee
+byeee
+jaaaa
+avi gai boo booooo
+haan cutiee
+Dad che
+haan cuttu
+i lovee youuuu
+i love you too
+avu 1 min
+haan boo boo
+image ni size shayad change karu biju kai nathi karva nu
+barabar j che pn 1st vadi image thodi moti rakhvi che
+haan honey
+hmm ok
+kai naiii dad keta hata ke savare veli uthi ja j to
+i looovvvveeee yoooouuuuu huuubbbyyyyyy!!!!
+yad j hoy ne
+ek min... payment aje apai na gyu?
+jya bhi hoy ena thi su farak pde
+ye sahi hai
+6oti boo boo
+payment no maksat to puro thai gyo ne aje
+cutieee
+haan hubby
+tare badhu karvu hoy ane mitu ne ignore huhh
+hmm hmmm atyar thi avu karas
+na karto hoy to bbhi avu j ke che
+hse chlo theeekk che
+hmmm ja hve hu fw kari ne avu 
+ummm 5 mins
+na naa 10 
+haan sweetie
+i love youuuuu <3 <3 <3
+cutuuu
+joyu maru typing saru che
+this is called typing my friend
+shhh i love you
+i love you too
+jaa hve bc
+achha boo booo hoy e na jai?
+eyy 6otu baby
+tara karta aaeshu aayu mota che
+chu ne hu smart boo boo
+he nee
+sorry hubby
+tari pase karavyu
+hmmm ok
+kari nakh 
+hmmmm
+hknn
+tare olu nathi thatu ctrl kari ne select
+nai 
+cursor multiple jagya
+achhaa
+annnn
+tu kari nakh je
+hehee... naa budhuu
+upar na ma 1 tab leave karyu che e
+pheww...
+byeeeeeee
+muaahhh 
+I LOVE YOUU HUBBY
+I LOVE YOU TOOO wifeyyyyy
+*/
